# chat-man

./: .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py  utils.py
backend/app/agent/: factory.py  llm.py
backend/app/agent/react_agent/: context.py  graph.py  nodes.py  prompts.py  states.py  tools.py
backend/app/api/v1/: main.py
backend/app/api/v1/chat/: api.py  models.py
backend/app/api/v1/rag/: api.py
backend/app/api/v2/: main.py
backend/app/core/: config.py  milvus_client.py
backend/app/services/rag/indexing/: bi_encoders.py  chunker.py
backend/app/services/rag/inference/: retriever.py
backend/app/utils/: load_default_data.py
backend/client/: milvus_client.py
backend/notebooks/: indexing.ipynb  learning_notes1.ipynb  load_data.ipynb
backend/services/: load_dataset.py
deployment/: docker-compose.milvus.yml  docker-compose.yml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  Chat.tsx  interface.ts
frontend/src/components/: ToolCallDisplay.tsx
