[project]
name = "ag-ui-testing-backend"
version = "0.1.0"
description = "Backend server of the AG-UI testing application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=3.3.1",
    "fastapi[standard]>=0.119.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-nebius>=0.1.3",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "python-dotenv>=1.1.1",
]
