[project]
name = "ag-ui-testing-backend"
version = "0.1.0"
description = "Backend server of the AG-UI testing application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-protocol>=0.1.9",
    "clerk-backend-api>=3.3.1",
    "fastapi[standard]>=0.119.0",
    "grpcio-tools>=1.76.0",
    "ipykernel>=7.1.0",
    "kagglehub[hf-datasets]>=0.4.0",
    "langchain>=1.0.4",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.31",
    "langchain-milvus>=0.3.3",
    "langchain-nebius>=0.1.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "protobuf>=6.33.1",
    "pymilvus[milvus-lite,model]>=2.6.4",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
]
